<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginTop="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="40dp"

    android:orientation="vertical"
    tools:context="Activities.BrowsePage">

    <LinearLayout
        android:id="@+id/search_all_header"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search_options"
        >

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor"
            />

        <Button
            android:id="@+id/search_all_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/search"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_options"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@id/search_all_header"
        app:layout_constraintBottom_toTopOf="@id/search_all_results"
        >

        <Button
            android:id="@+id/search_category"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:onClick="selectCategory"
            android:text="@string/category"
            android:textSize="12dp" />

        <Button
            android:id="@+id/search_popular"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:onClick="selectPopular"
            android:text="@string/popular"
            android:textSize="12dp" />

        <Button
            android:id="@+id/search_price"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:onClick="selectPrice"
            android:text="@string/price"
            android:textSize="12dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_all_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@+id/search_options"
        app:layout_constraintBottom_toBottomOf="parent">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:verticalScrollbarPosition="left"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>