<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    tools:context=".UserFragments.UserBrowse">

    <LinearLayout
        android:id="@+id/search_all_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/search_options" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"

            android:background="@color/White"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/search_all_header"
        app:layout_constraintBottom_toTopOf="@id/resultsListView" >

        <Button
            android:id="@+id/browse_category_tabs_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@color/LightGold"
            android:text="@string/category"
            android:textSize="10sp" />

        <Button
            android:id="@+id/browse_price_tabs_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@color/LightGold"
            android:text="@string/price"
            android:textSize="10sp" />

        <Button
            android:id="@+id/browse_popular_tabs_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:background="@color/LightGold"
            android:text="@string/popular"
            android:textSize="10sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/resultsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_options">
    </ListView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/DarkGray"
            android:drawableTop="@drawable/browse_icon_gold"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"

            android:text="@string/browse"
            android:textColor="@color/LightGold"
            android:textSize="9sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/profileButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="75dp"
            tools:layout_conversion_absoluteWidth="103dp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/bookingButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/DarkGray"
            android:drawableTop="@drawable/bookings_icon_white"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"

            android:text="@string/user_bookings"
            android:textColor="@color/White"
            android:textSize="9sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/favoritesButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="75dp"
            tools:layout_conversion_absoluteWidth="103dp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/DarkGray"
            android:drawableTop="@drawable/my_profile_icon_white"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"

            android:text="@string/user_profile"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/White"
            android:textSize="9sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/favoritesButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/homeButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp"
            tools:layout_conversion_absoluteHeight="75dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <Button
            android:id="@+id/favoritesButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/DarkGray"
            android:drawableTop="@drawable/favorites_icon_white"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"

            android:text="@string/my_favorites"
            android:textColor="@color/White"
            android:textSize="9sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bookingButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/profileButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="75dp"
            tools:layout_conversion_absoluteWidth="103dp"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>