<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    android:orientation="vertical"
    tools:context=".UserPages.UserBookings">

    <LinearLayout
        android:id="@+id/user_bookings_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/user_bookings_history_tab"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/interactive_button_light_gold"
            android:onClick="selectHistory"
            android:text="History"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/user_bookings_current_tab"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/interactive_button_light_gold"
            android:onClick="selectCurrent"
            android:text="@string/current"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <ListView
        android:id="@+id/user_bookings_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/user_bookings_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_bookings_tabs"></ListView>

    <LinearLayout
        android:id="@+id/user_bookings_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/user_browse_page"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/DarkGray"
            android:drawableTop="@drawable/browse_icon_white"
            android:onClick="selectBrowse"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/browse"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/White"
            android:textSize="9sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/user_profile_page"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/DarkGray"
            android:drawableTop="@drawable/my_profile_icon_white"
            android:onClick="selectProfile"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/user_profile"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/White"
            android:textSize="9sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/user_favorites_page"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/DarkGray"
            android:drawableTop="@drawable/favorites_icon_white"
            android:onClick="selectFavorites"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/my_favorites"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/White"
            android:textSize="9sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/user_bookings_page"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/DarkGray"
            android:drawableTop="@drawable/bookings_icon_gold"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/user_bookings"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/SelectedGold"
            android:textSize="9sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"
            tools:ignore="SmallSp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
