<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFragments.UserFavorites">

    <EditText
        android:id="@+id/searchEditText2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/radius"
        android:drawableLeft="@drawable/ic_search_black_24dp"
        android:drawablePadding="20dp"
        android:drawableTint="#FFFF2626"
        android:ems="10"
        android:hint="Search your favorites"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:shadowColor="#00EEC5C5"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="bottom"
        android:background="#FAFAFA"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/user_browse_page"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#434343"
            android:drawableTop="@drawable/browse_icon_white"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"

            android:text="@string/browse"
            android:textColor="#FFFFFF"
            android:textSize="9sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_profile_page"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="75dp"
            tools:layout_conversion_absoluteWidth="103dp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/user_profile_page"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#434343"
            android:drawableTop="@drawable/my_profile_icon_white"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"

            android:text="@string/user_profile"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="9sp"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_favorites_page"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user_browse_page"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp"
            tools:layout_conversion_absoluteHeight="75dp"
            tools:layout_conversion_absoluteWidth="103dp" />

        <Button
            android:id="@+id/user_favorites_page"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#434343"
            android:drawableTop="@drawable/favorites_icon_gold"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"

            android:text="@string/my_favorites"
            android:textColor="#FFF2CC"
            android:textSize="9sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_bookings_page"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user_profile_page"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="75dp"
            tools:layout_conversion_absoluteWidth="103dp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/user_bookings_page"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#434343"
            android:drawableTop="@drawable/bookings_icon_white"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"

            android:text="@string/user_bookings"
            android:textColor="#FFFFFF"
            android:textSize="9sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:visibility="visible"
            app:fontFamily="@font/montserrat"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user_favorites_page"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="75dp"
            tools:layout_conversion_absoluteWidth="103dp"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="#EEEEEE"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText2"
        tools:layout_editor_absoluteX="41dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/white_button_round"
        android:tint="@color/colorRed"
        app:srcCompat="@drawable/ic_tune_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/user_favorites_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/user_favorites_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/user_favorites_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>